Fix css spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@
     }
 body {
 	padding: 0px;
-	margin: 0px;
+	margin: 90px 0 0 0;
   	color: #493c33;
   	background-color: black;
 	background-size: 1080px;
@@ -22,14 +22,12 @@ header {
 	padding: 0px;
 	width: 400px;
 	height: 460px;
-	top: 90px;
 	}
 section {
 	margin: 0px;
   	padding: 0px;
 	width: 400px;
 	height: 460px;
-	top: 90px;
 	}
 section h1 {
       border-bottom: 2px solid black;
